# PotatoAlert

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PotatoAlert.qrc  PotatoAlert.rc  README.md  apierrors.py  appveyor.yml  build.py  colors.py  conanfile.py  config.py  gui.py  logger.py  main.cpp  potatoalert.py  requirements.txt  settings.ui  textcolors.py  version.py
Client/: CMakeLists.txt  Game.cpp  Game.hpp  Game.linux.cpp  Game.win32.cpp  MatchHistory.cpp  MatchHistory.hpp  PotatoClient.cpp  PotatoClient.hpp  ReplayAnalyzer.cpp  ReplayAnalyzer.hpp  Serializer.cpp  Serializer.hpp  StatsParser.cpp  StatsParser.hpp
Client/Test/: ClientTest.cpp
Client/src/: Config.cpp  DatabaseManager.cpp  DirectoryWatcher.cpp  Game.cpp  Game.linux.cpp  Game.win32.cpp  Log.cpp  MatchHistory.cpp  PotatoClient.cpp  ReplayAnalyzer.cpp  Screenshot.cpp  StatsParser.cpp  StringTable.cpp  SysInfo.linux.cpp  SysInfo.win32.cpp  Updater.win32.cpp
Core/: AsciiTable.hpp  Blowfish.cpp  Blowfish.hpp  Bytes.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Defer.hpp  Directory.hpp  Directory.win32.cpp  DirectoryWatcher.cpp  DirectoryWatcher.hpp  File.hpp  File.win32.cpp  Instrumentor.hpp  Json.cpp  Json.hpp  Log.cpp  Math.hpp  Mutex.linux.cpp  Mutex.win32.cpp  Process.win32.cpp  Screenshot.cpp  Sha1.cpp  Sha1.hpp  Sha256.cpp  Sha256.hpp  Sqlite.cpp  Sqlite.hpp  String.cpp  String.hpp  StringTable.cpp  StringTable.hpp  ThreadPool.cpp  ThreadPool.hpp  Time.win32.cpp  Version.cpp  Version.hpp  Xml.hpp  Zip.cpp  (+2 more)
Core/src/: ApplicationGuard.linux.cpp  ApplicationGuard.win32.cpp  Blowfish.cpp  Config.cpp  Directory.cpp  Directory.linux.cpp  Directory.win32.cpp  DirectoryWatcher.cpp  Encoding.linux.cpp  Encoding.win32.cpp  File.linux.cpp  File.win32.cpp  FileMapping.linux.cpp  FileMapping.win32.cpp  Json.cpp  Log.cpp  Mutex.linux.cpp  Mutex.win32.cpp  PeFileVersion.cpp  PeReader.cpp  Process.linux.cpp  Process.win32.cpp  Screenshot.cpp  Semaphore.linux.cpp  Semaphore.win32.cpp  Sha1.cpp  Sha256.cpp  Sqlite.cpp  StandardPaths.linux.cpp  StandardPaths.win32.cpp  String.cpp  StringTable.cpp  ThreadPool.cpp  Time.cpp  Time.linux.cpp  Time.win32.cpp  Version.cpp  Xml.linux.cpp  Xml.win32.cpp  Zip.cpp  (+1 more)
FramelessHelper/: CMakeLists.txt  FramelessHelper_global.hpp  FramelessHelper_win32.hpp
FramelessHelper/src/: FramelessHelper_win32.cpp  FramelessUtilities.cpp  FramelessUtilities_win32.cpp  FramelessWindowsManager.cpp
GameFileUnpack/: CMakeLists.txt  IdxPkg.hexpat  StandaloneMoFileReader.cpp
GameFileUnpack/Test/: GameFileUnpackTest.cpp
GameFileUnpack/src/: GameFileUnpack.cpp  MoFile.cpp
Gui/: AboutWidget.cpp  CMakeLists.txt  FramelessDialog.win32.cpp  MainWindow.cpp  MainWindow.hpp  MatchHistory.cpp  MatchHistory.hpp  MatchHistoryGui.cpp  MatchHistoryGui.hpp  NativeWindow.cpp  NativeWindow.hpp  NativeWindow.win32.cpp  Palette.cpp  Palette.hpp  PotatoAlert.cpp  TitleBar.cpp  TitleBar.hpp
Gui/MenuBar/: MenuEntryButton.cpp  MenuEntryButton.hpp  VerticalMenuBar.cpp  VerticalMenuBar.hpp
Gui/SettingsWidget/: FolderStatus.cpp  (+7 more)
Installer/: CMakeLists.txt
MinimapRenderer/: CMakeLists.txt
PotatoAlert/: CMakeLists.txt  PotatoAlert.cpp  PotatoAlert.linux.cpp  PotatoAlert.win32.cpp
ReplayParser/: Analyzer.cpp  Analyzer.hpp  ByteUtil.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  GameFiles.cpp  GameFiles.hpp  PacketParser.cpp  PacketParser.hpp  Packets.cpp  Packets.hpp  README.md  ReplayMeta.hpp  ReplayParser.cpp  ReplayParser.hpp  ReplayVersion.hpp  StandaloneReplayParser.cpp  Types.cpp  Types.hpp
Test/: CMakeLists.txt  CoreTest.cpp  GameFileUnpackTest.cpp  GameTest.cpp  PotatoTest.cpp  ReplayTest.cpp  UtilTest.cpp
Updater/: CMakeLists.txt  PotatoUpdater.cpp  Updater.cpp  Updater.hpp  UpdaterGui.cpp  UpdaterGui.hpp
Util/: Blowfish.cpp  Blowfish.hpp  CMakeLists.txt  CSVWriter.cpp  CSVWriter.hpp  Config.cpp  Config.hpp  Directory.hpp  Directory.win32.cpp  File.hpp  File.win32.cpp  Game.cpp  Game.hpp  Hash.hpp  Instrumentor.hpp  Json.hpp  Log.cpp  Log.hpp  Math.hpp  PotatoClient.cpp  PotatoClient.hpp  Process.hpp  Screenshot.cpp  Screenshot.hpp  Serializer.cpp  Serializer.hpp  Singleton.hpp  Sqlite.cpp  Sqlite.hpp  StatsParser.cpp  StatsParser.hpp  String.cpp  String.hpp  StringTable.hpp  Time.linux.cpp  Version.cpp  Version.hpp  Xml.cpp  Zip.hpp  Zlib.cpp
framelessHelper/: CMakeLists.txt  FramelessHelper_win32.cpp  FramelessUtilities.cpp  FramelessUtilities_win32.cpp  FramelessWindowsManager.cpp  FramelessWindowsManager.hpp
gui/: AboutWidget.cpp  AboutWidget.hpp  CMakeLists.txt  FramelessDialog.cpp  FramelessDialog.hpp  HelpWidget.cpp  HelpWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.hpp  NativeWindow.cpp  NativeWindow.h  NativeWindow.hpp  TitleBar.cpp  TitleBar.h  TitleBar.hpp  about.py  custom_widget.py  help.py  label.py  main_window.py  menubar.py  settings.py  stats_table.py  team_stats.py  update_window.py
test/: CMakeLists.txt  GameTest.cpp  Test.cpp  VersionTest.cpp  main.cpp
updater/: CMakeLists.txt  Updater.cpp  Updater.hpp  Updater.win32.cpp  UpdaterGui.cpp  UpdaterGui.hpp  main.cpp
util/: CMakeLists.txt  CSVWriter.cpp  CSVWriter.hpp  Config.cpp  Config.hpp  File.hpp  File.win32.cpp  Flags.hpp  Game.cpp  Game.hpp  Json.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  Palette.cpp  Palette.hpp  PotatoClient.cpp  PotatoClient.hpp  Process.hpp  Process.win32.cpp  StatsParser.cpp  StatsParser.hpp  StringTable.cpp  StringTable.hpp  Time.cpp  Time.hpp  Time.linux.cpp  Time.win32.cpp  Version.cpp  Version.hpp  Zip.cpp  Zip.hpp
utils/: CMakeLists.txt  CSVWriter.cpp  CSVWriter.hpp  Config.cpp  Config.h  Config.hpp  Game.cpp  Game.h  Game.hpp  Logger.cpp  Logger.h  Logger.hpp  Palette.cpp  Palette.hpp  PotatoClient.cpp  PotatoClient.h  PotatoClient.hpp  StatsParser.cpp  StatsParser.h  StatsParser.hpp  StringTable.cpp  StringTable.h  StringTable.hpp  Updater.cpp  Updater.h  Updater.hpp  Version.cpp  Version.h  Version.hpp  analytics.py  api.py  central_api.py  config.py  custom_api.py  dcs.py  gui.py  logger.py  resource_path.py  ship_utils.py  stat_colors.py  (+1 more)
(+308 files in other folders)
